zadani, usecase a er diagram

--- a/docs/documentation.tex
+++ b/docs/documentation.tex
@@ -38,7 +38,7 @@
 		{\LARGE Fakulta informačních technologií }\\[4.0cm]
 
 		\textsc{\LARGE IDS - Databázové systémy}\\[0.5cm]
-		\textsc{\LARGE 2020/2021}\\[3.5cm]
+		\textsc{\LARGE 2021/2022}\\[3.5cm]
 
 		{\LARGE Projekt}\\[0.5cm]
     {\LARGE \textbf{Půjčovna hudebních nosičů}}\\
@@ -65,6 +65,8 @@
 \newpage
 % end first page
 
-\include{contents/zadani.tex}
+\include{contents/1_zadani.tex}
+\include{contents/2_usecase_diagram.tex}
+\include{contents/3_er_diagram.tex}
 
 \end{document}
