Minor tweaks in usecase diagram

--- a/docs/contents/2_usecase_diagram.tex
+++ b/docs/contents/2_usecase_diagram.tex
@@ -22,4 +22,4 @@ Zaměstnanec může vyhledat album nebo skladbu, vyhledat výpůjčky libovolné
 Podle nastavených práv může správce spravovat zaměstnance, spravovat zákazníky a editovat alba.
 
 \subsubsection{Čas}
-Zasílá upomínky na vrácení výpůjčky a uděluje pokuty za nevrácení nosiče.
+Zasílá upomínky na vrácení výpůjčky
