--- a/docs/contents/2_usecase_diagram.tex
+++ b/docs/contents/2_usecase_diagram.tex
@@ -16,10 +16,8 @@ Může vyhledat album nebo skladbu a může se přihlásit do systému.
 Zákazník může vyhledat album nebo skladbu, vyhledat vlastní výpůjčky a podrobnosti o nich a odhlásit se ze systému.
 
 \subsubsection{Zaměstnanec}
-Zaměstnanec může vyhledat album nebo skladbu, vyhledat výpůjčky libovolného uživatele, zadat nebo dokončit výpůjčku, registrovat zákazníka a nebo se odhlásit.
-
-\subsubsection{Správce (Zaměstnanec)}
-Podle nastavených práv může správce spravovat zaměstnance, spravovat zákazníky a editovat alba.
+Zaměstnanec může vyhledat album nebo skladbu, vyhledat výpůjčky libovolného uživatele, zadat nebo dokončit výpůjčku, registrovat zákazníka a nebo se odhlásit. \\
+Podle nastavených práv může spravovat zaměstnance, spravovat zákazníky a editovat alba.
 
 \subsubsection{Čas}
 Zasílá upomínky na vrácení výpůjčky
