--- a/docs/documentation.tex
+++ b/docs/documentation.tex
@@ -68,5 +68,6 @@
 \include{contents/1_zadani.tex}
 \include{contents/2_usecase_diagram.tex}
 \include{contents/3_er_diagram.tex}
+\include{contents/4_advanced_objects.tex}
 
 \end{document}
